<resources>
    <string name="app_name">ExaMining</string>
    <string name="username_example_com">username@example.com</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="password123">passworD123.</string>
    <string name="sign_in_success">Successfully signed in!</string>
    <string name="welcome">Welcome!</string>
    <string name="login_error">Email address or password is incorrect!</string>
    <string name="over_attempt">Too many failed login attempts! Please try again later!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_exists_already">This e-mail address is already taken!</string>
    <string name="reset">Reset</string>
    <string name="password_again">Password (again)</string>
    <string name="password">Password</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="password_valid">Password is valid</string>
    <string name="password_invalid">Password must contain at least one number, one lowercase and
        uppercase letter, one special character and 8 characters</string>
    <string name="password_not_match">Passwords entered do not match!</string>
    <string name="sign_up_success">Successfully signed up!</string>
    <string name="enter_info_sign_in">Please enter email and password!</string>
    <string name="enter_info">Please enter all required information!</string>
    <string name="name_invalid">Name fields must contain letters!</string>
    <string name="format_phone">Phone number must match format! Example +5556667777</string>
    <string name="phone_number_example">+5556667777</string>
    <string name="format_email">Email address must match format! Example someone@example.com</string>
    <string name="question">Question</string>
    <string name="question_quest_card">Question - </string>
    <string name="show">Show</string>
    <string name="upgrade">Upgrade</string>
    <string name="delete">Delete</string>
    <string name="show_answer">Show Answer</string>
    <string name="hide_answer">Hide Answer</string>
    <string name="all_questions">All Questions</string>
    <string name="A">A.</string>
    <string name="B">B.</string>
    <string name="C">C.</string>
    <string name="D">D.</string>
    <string name="E">E.</string>
    <string name="optionA">Option A</string>
    <string name="optionB">Option B</string>
    <string name="optionC">Option C</string>
    <string name="optionD">Option D</string>
    <string name="optionE">Option E</string>
    <string name="yes">Yes</string>
    <string name="attach_file">Attach File</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="exit_menu">Are you sure you want to sign out? Unsaved changes will be lost</string>
    <string name="exit_app">Are you sure you want to exit?</string>
    <string name="deleted_question">Question is deleted successfully</string>
    <string name="add_question">Add Question</string>
    <string name="upgrade_question">Upgrade Question</string>
    <string name="add_question_ok">Question is added successfully</string>
    <string name="upgrade_question_ok">Question is updated successfully</string>
    <string name="no_file_found">No file found!</string>
    <string name="add_photo">Add Photo</string>
    <string name="exam_settings">Exam Settings</string>
    <string name="create_exam">Create Exam</string>
    <string name="list_questions">List Questions</string>
    <string name="menu">Menu</string>
    <string name="answer">Answer</string>
    <string name="exam_countdown">Exam Countdown</string>
    <string name="difficulty">Difficulty</string>
    <string name="question_point">Question Point</string>
    <string name="space" />
    <string name="_00">00</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="colon">:</string>
    <string name="write_object_error">Error occurred while saving to file!</string>
    <string name="write_object_success">Successfully saved to file!</string>
    <string name="read_object_error">Error occurred while reading from file!</string>
    <string name="read_object_success">Successfully read from file!</string>
    <string name="read_error_from_menu">Error occurred while receiving data!</string>
    <string name="choose_question">Please choose at least one question to create exam</string>
</resources>