<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rotationY="0"
    tools:context=".ActivitySignUp">

    <ImageView
        android:id="@+id/rootRL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_sign_up"
        android:contentDescription="@string/todo"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="60dp"
        android:text="@string/first_name"
        app:layout_constraintStart_toStartOf="@+id/editTextPersonFirstName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPersonFirstName"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="30dp"
        android:autofillHints=" "
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textViewLastName"
        app:layout_constraintEnd_toStartOf="@+id/buttonAddPhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewFirstName" />

    <TextView
        android:id="@+id/textViewLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="90dp"
        android:text="@string/last_name"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPhone"
        app:layout_constraintStart_toStartOf="@+id/editTextPersonLastName"
        app:layout_constraintTop_toTopOf="@+id/textViewFirstName" />

    <EditText
        android:id="@+id/editTextPersonLastName"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="90dp"
        android:autofillHints=" "
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextPersonFirstName" />

    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="1dp"
        android:text="@string/phone_number"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:autofillHints=" "
        android:digits="0123456789+"
        android:ems="10"
        android:hint="@string/phone_number_example"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddPhoto" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="1dp"
        android:text="@string/e_mail_address"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailAddressSign"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailAddressSign" />

    <EditText
        android:id="@+id/editTextEmailAddressSign"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="120dp"
        android:autofillHints=" "
        android:ems="10"
        android:hint="@string/username_example_com"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/textViewPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="1dp"
        android:rotationX="0"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordSign"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordSign" />

    <EditText
        android:id="@+id/editTextPasswordSign"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="49dp"
        android:autofillHints=" "
        android:ems="10"
        android:hint="@string/password123"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddressSign" />

    <TextView
        android:id="@+id/textViewPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="1dp"
        android:text="@string/password_again"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordSign2"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPasswordSign2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="217dp"
        android:autofillHints=" "
        android:ems="10"
        android:hint="@string/password123"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/buttonFinish"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="84dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/delete"
        android:padding="1dp"
        android:scaleType="centerInside"
        android:src="@drawable/button_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonReset"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordSign2" />

    <ImageButton
        android:id="@+id/buttonReset"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="202dp"
        android:layout_marginBottom="87dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/delete"
        android:padding="1dp"
        android:scaleType="centerInside"
        android:src="@drawable/button_reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonFinish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordSign2" />

    <ImageButton
        android:id="@+id/buttonAddPhoto"
        android:layout_width="0dp"
        android:layout_height="117dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="45dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/todo"
        android:padding="10dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextPersonFirstName"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_user_sign_up" />

    <TextView
        android:id="@+id/textViewSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="12dp"
        android:text="@string/sign_in"
        app:layout_constraintStart_toStartOf="@+id/buttonFinish"
        app:layout_constraintTop_toBottomOf="@+id/buttonFinish" />

    <TextView
        android:id="@+id/textViewReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="15dp"
        android:text="@string/reset"
        app:layout_constraintStart_toStartOf="@+id/buttonReset"
        app:layout_constraintTop_toBottomOf="@+id/buttonReset" />

</androidx.constraintlayout.widget.ConstraintLayout>