<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMain">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="339dp"
        android:layout_height="169dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="@+id/textEmailAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textEmailAddress"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_user_logo" />

    <EditText
        android:id="@+id/textEmailAddress"
        android:layout_width="335dp"
        android:layout_height="40dp"
        android:layout_marginTop="92dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username_example_com"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/textPassword"
        app:layout_constraintStart_toStartOf="@+id/textPassword"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="335dp"
        android:layout_height="40dp"
        android:layout_marginTop="11dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password123"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmailAddress" />

    <ImageButton
        android:id="@+id/buttonSignIn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="45dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/sign_up"
        android:padding="1dp"
        android:scaleType="centerInside"
        android:src="@drawable/button_sign_in"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonSignUp"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/buttonSignUp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="100dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/sign_in"
        android:padding="1dp"
        android:scaleType="centerInside"
        android:src="@drawable/button_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="@+id/buttonSignUp"
        app:layout_constraintStart_toStartOf="@+id/buttonSignUp"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="@+id/buttonSignIn"
        app:layout_constraintStart_toStartOf="@+id/buttonSignIn"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />


</androidx.constraintlayout.widget.ConstraintLayout>