<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityExamSettings">

    <TextView
        android:id="@+id/titleActivitySettings"
        android:layout_width="345dp"
        android:layout_height="67dp"
        android:layout_marginTop="32dp"
        android:background="#05D3ED"
        android:padding="20dp"
        android:text="@string/exam_settings"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userNameSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/space"
        android:textColor="#05D3ED"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleActivitySettings" />

    <TextView
        android:id="@+id/timeLabelSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/exam_countdown"
        app:layout_constraintBottom_toBottomOf="@+id/timeHourSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/timeHourSettings"
        app:layout_constraintVertical_bias="0.579" />

    <EditText
        android:id="@+id/timeHourSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:hint="@string/_00"
        android:inputType="phone"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/timeColonSettings"
        app:layout_constraintStart_toEndOf="@+id/timeLabelSettings"
        app:layout_constraintTop_toTopOf="@+id/timeColonSettings"
        app:layout_constraintVertical_bias="0.523"
        android:autofillHints=" " />

    <EditText
        android:id="@+id/timeMinuteSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/_00"
        android:inputType="phone"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleActivitySettings"
        android:autofillHints=" " />

    <TextView
        android:id="@+id/timeColonSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/colon"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/timeMinuteSettings"
        app:layout_constraintEnd_toStartOf="@+id/timeMinuteSettings"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toEndOf="@+id/timeHourSettings"
        app:layout_constraintTop_toTopOf="@+id/timeMinuteSettings"
        app:layout_constraintVertical_bias="0.476" />

    <TextView
        android:id="@+id/questionDifficultyLabelSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/difficulty"
        app:layout_constraintStart_toStartOf="@+id/timeLabelSettings"
        app:layout_constraintTop_toBottomOf="@+id/timeLabelSettings" />

    <SeekBar
        android:id="@+id/difficultySeekBarSettings"
        android:layout_width="280dp"
        android:layout_height="38dp"
        android:layout_marginTop="11dp"
        android:max="5"
        android:min="2"
        app:layout_constraintStart_toStartOf="@+id/questionDifficultyLabelSettings"
        app:layout_constraintTop_toBottomOf="@+id/questionDifficultyLabelSettings" />

    <TextView
        android:id="@+id/difficultySeekBarValueSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="76dp"
        android:text="@string/space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/difficultySeekBarSettings"
        app:layout_constraintTop_toBottomOf="@+id/timeMinuteSettings" />

    <TextView
        android:id="@+id/questionPointLabelSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/question_point"
        app:layout_constraintStart_toStartOf="@+id/difficultySeekBarSettings"
        app:layout_constraintTop_toBottomOf="@+id/difficultySeekBarSettings" />

    <SeekBar
        android:id="@+id/pointSeekBarSettings"
        android:layout_width="280dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:min="1"
        android:max="100"
        app:layout_constraintStart_toStartOf="@+id/questionPointLabelSettings"
        app:layout_constraintTop_toBottomOf="@+id/questionPointLabelSettings" />

    <TextView
        android:id="@+id/pointSeekBarValueSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="104dp"
        android:text="@string/space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pointSeekBarSettings"
        app:layout_constraintTop_toBottomOf="@+id/difficultySeekBarValueSettings" />

    <ImageButton
        android:id="@+id/button_ok_settings"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="185dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="44dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/todo"
        android:padding="5dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/buttonReset_settings"
        app:layout_constraintTop_toBottomOf="@+id/pointSeekBarSettings"
        app:srcCompat="@drawable/button_ok" />

    <ImageButton
        android:id="@+id/buttonReset_settings"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="44dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/todo"
        android:padding="5dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/button_ok_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_ok_settings"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/button_reset" />


</androidx.constraintlayout.widget.ConstraintLayout>